trying to fix double scroll bar issue since footer was added

--- a/src/common/styles/global.scss
+++ b/src/common/styles/global.scss
@@ -391,6 +391,15 @@ $theme-colors: map-merge($theme-colors, (
     font-family: 'Azo Sans Bk';
 }
 
+html,
+body,
+#__next {
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+}
+
+
 .btn-lg {
     font-family: 'Azo Sans Bk';
     font-size: 1rem;
@@ -449,6 +458,9 @@ $theme-colors: map-merge($theme-colors, (
     }
     @each $name, $color in $theme-colors{
         @include withTheme( $name ){
+            & {
+                background-color: $color;
+            }
             .navbar-collapse > ul li.dropdown .dropdown-menu {
                 background-color: $color;
 
@@ -475,6 +487,10 @@ $theme-colors: map-merge($theme-colors, (
                     }
                 }
             }
+        }
+
+        &.fixed-top ~ .navbar-spacer {
+            margin-top: $navbar-height;
         }
     }
     @include whenCollapsed( map-keys($grid-breakpoints) ){
@@ -523,6 +539,7 @@ $theme-colors: map-merge($theme-colors, (
         }
     }
 }
+
 pre {
     tab-size: 4;
 }
